--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -94,3 +94,129 @@ a {
   color: inherit;
   text-decoration: none;
 }
+
+.modal-t2p {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  opacity: 0;
+  visibility: hidden;
+  transform: scale(1.1);
+  transition: visibility 0s linear 0.25s, opacity 0.25s 0s, transform 0.25s;
+}
+.modal-content-t2p {
+  width: 388px;
+  height: 545px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 0px;
+  max-width: 390px;
+  border-radius: 0.5rem;
+}
+.modal-content-t2p-login {
+  width: 388px;
+  height: 392px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: white;
+  padding: 15px;
+  max-width: 390px;
+  border-radius: 0.5rem;
+}
+.close-button-t2p {
+  float: right;
+  width: 1.5rem;
+  line-height: 1.5rem;
+  text-align: center;
+  cursor: pointer;
+  border-radius: 0.25rem;
+  background-color: lightgray;
+}
+.close-button-t2p:hover {
+  background-color: darkgray;
+}
+.show-modal-t2p {
+  opacity: 1;
+  visibility: visible;
+  transform: scale(1);
+  transition: visibility 0s linear 0s, opacity 0.25s 0s, transform 0.25s;
+}
+@keyframes lds-bars {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.5;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@-webkit-keyframes lds-bars {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.5;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+.lds-bars {
+  position: relative;
+}
+.lds-bars div {
+  position: absolute;
+  width: 20px;
+  height: 80px;
+  top: 60px;
+  -webkit-animation: lds-bars 1s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+  animation: lds-bars 1s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+}
+.lds-bars div:nth-child(1) {
+  left: 30px;
+  background: #ff727d;
+  -webkit-animation-delay: -0.6s;
+  animation-delay: -0.6s;
+}
+.lds-bars div:nth-child(2) {
+  left: 70px;
+  background: #ffd391;
+  -webkit-animation-delay: -0.4s;
+  animation-delay: -0.4s;
+}
+.lds-bars div:nth-child(3) {
+  left: 110px;
+  background: #fffbd0;
+  -webkit-animation-delay: -0.2s;
+  animation-delay: -0.2s;
+}
+.lds-bars div:nth-child(4) {
+  left: 150px;
+  background: #90ffb5;
+}
+.lds-bars {
+  width: 92px !important;
+  height: 92px !important;
+  -webkit-transform: translate(-46px, -46px) scale(0.46) translate(46px, 46px);
+  transform: translate(-46px, -46px) scale(0.46) translate(46px, 46px);
+}
+.frame-t2p {
+  height: 100%;
+  width: 100%;
+  border-width: 0px;
+  scrolling: no;
+}
+@media screen and (max-width: 388px) {
+  .modal-content-t2p {
+    width: 80%;
+  }
+}
